# Apollo

./: CMakeLists.txt  CODE_REVIEW_FIXES_2026-05-01.md  OPTIMIZATION_SUMMARY.md  README.md  SECURITY_CHANGELOG.md  package-lock.json  package.json  vite.config.js
benchmarks/: CMakeLists.txt  benchmark_hotpaths.cpp
cmake/: apollo_cmake_optimizations.cmake
cmake/compile_definitions/: common.cmake  windows.cmake
cmake/dependencies/: Boost_Sunshine.cmake  common.cmake  msquic.cmake  opentelemetry.cmake  tracy.cmake
cmake/macros/: common.cmake
cmake/prep/: build_version.cmake  options.cmake
cmake/targets/: common.cmake
docs/: ADAPTIVE_STREAMING_DESIGN.md  building.md  changelog.md  configuration.md  getting_started.md  performance_tuning.md  third_party_packages.md
scripts/: profile_streaming.ps1
src/: audio.cpp  bitrate_controller.h  config.cpp  config.h  confighttp.cpp  confighttp.h  crypto.cpp  crypto.h  display_device.cpp  file_handler.cpp  frame_pool.h  httpcommon.cpp  httpcommon.h  logging.h  main.cpp  network.cpp  network.h  network_cache.h  nvhttp.cpp  nvhttp.h  performance_monitor.cpp  performance_monitor.h  process.cpp  quic_transport.cpp  quic_transport.h  rtsp.cpp  stream.cpp  stream.h  sync.h  system_tray.cpp  task_pool.h  telemetry.cpp  telemetry.h  thread_pool.h  thread_safe.h  utility.h  uuid.h  video.cpp  video.h
src/nvenc/: nvenc_base.cpp  nvenc_base.h
src/platform/windows/: display.h  display_base.cpp  display_ram.cpp  display_vram.cpp  virtual_display.cpp  virtual_display.h  windows.rc
src/platform/windows/nvprefs/: driver_settings.h
(+10 files in other folders)
